--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_inappwebview
-description: A Flutter geolocation plugin.
-version: 7.6.2
+description: A Flutter Inappwebview plugin.
+version: 6.0.0
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
