--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dev_dependencies:
 
 flutter:
   plugin:
+    implements: flutter_inappwebview
     platforms:
       android:
         package: com.pichillilorenzo.flutter_inappwebview
